--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -28,6 +28,8 @@
             border-radius: 2rem;     
             background-color: $clr3;
             color: $clr2;
+            font-weight: 600;
+            font-size: 18px;
             margin-bottom: 40px;
            
         }
