added about sections and guide section

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -2,10 +2,13 @@
 $clr1: #0EA47A;
 $clr2: white;
 $clr3: #D25CEE;
-$clr4: #9033DA;
+$clr4: #4B44B8;
+$clr7: #f15b85;
 
 $clr5: #003AD2;
 $clr6: #dff0ea;
+$bgclr1: #000330;
+$bgclr2: #4B44B8;
 
 
 // Breakpoints
