--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,21 +1,14 @@
 .app-header {
-    // background-color: $clr1;
-    background-color: none;
-    
-    
-    // position: absolute;
-    // top: 0;
+    background-color: $clr1;
     width: 100vw;
     color: $clr2;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    z-index: 10;
-
+    
     .active {
-        color: complement($color: $clr1);
-        color: invert($color: $clr1);
+        color: $clr7;
     }
 
     a {
@@ -26,7 +19,6 @@
     img {
         width: 200px;
         height: 100%;
-        // height: 60px;
     }
 
     nav {
@@ -34,8 +26,5 @@
         display: flex;
         gap: 10px;
         margin-right: 140px;
-
-      
-
     }
 }
