--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -47,6 +47,12 @@
     }
 }
 
+@mixin background-img {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /* Media  Mixins */
 @mixin aspect-ratio($width, $height) {
     position: relative;
