--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -1,49 +1,158 @@
-.home-page{
+.home-page {
+    color: $clr2;
 
-    .app-header{
-        position: absolute;
-        
+    .app-header {
+        position: fixed;
+        top: 0;
+        background: none;
+        z-index: 10;
     }
 
-    .hero{
-        // position: absolute;
+    .hero {
         top: 0;
         z-index: 1;
         background-image: url(../../img/hero1.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
         width: 100vw;
         height: 100vh;
-        display: flex; 
-        justify-content: center;
+        @include background-img;
 
-        .hero-info{
-            margin-top: 140px;
-            align-items: center;
-            text-align: center;
-            display: flex;
-           flex-direction: column;
-           align-items: center;
-           width: 500px;
-           gap: 20px;
+        .hero-info {
+            margin-top: 240px;
+            gap: 15px;
+
+            @include for-mobile-layout {
+                gap: 30px;
+            }
         }
-        
-        button{
-            width: 250px;
+
+        .hero-btn {
+            width: 200px;
             height: 40px;
-            border-radius: 2rem;     
+            border-radius: 2rem;
             background-color: $clr3;
             color: $clr2;
             font-weight: 600;
-            font-size: 18px;
+            font-size: 1rem;
             margin-bottom: 40px;
-           
+            transition: 0.3s;
+
+            &:hover {
+                background-color: darken($color: $clr3, $amount: 20);
+            }
+
+            @include for-mobile-layout {
+                font-size: 1.5rem;
+                width: 300px;
+                height: 60px;
+            }
+
+            @include for-narrow-layout {
+                font-size: 1, 75rem;
+                width: 350px;
+                height: 70px;
+            }
+
+            @include for-midium-layout {
+                font-size: 2rem;
+                width: 400px;
+                height: 80px;
+            }
         }
 
-        h1{
+        h1 {
             font-size: 2rem;
-        }
-     }
 
+            @include for-mobile-layout {
+                font-size: 2.5rem;
+            }
+
+            @include for-narrow-layout {
+                font-size: 3rem;
+            }
+
+            @include for-midium-layout {
+                font-size: 4rem;
+
+            }
+        }
     }
+
+    .about {
+        height: 100vh;
+        background-color: $bgclr1;
+        padding: 100px 24px;
+        width: 100vw;
+        gap: 30px;
+        
+        flex-direction: column-reverse;
+
+        @include for-narrow-layout {
+            flex-direction: row;
+        }
+
+        @include for-normal-layout {
+            padding: 0 40px;
+        }
+
+        img {
+            flex-basis: 50%;
+            width: 300px;
+            flex-shrink: 1;
+            aspect-ratio: 16/9;
+
+            @include for-mobile-layout {
+                width: 80vw;
+            }
+
+            @include for-narrow-layout {
+                aspect-ratio: 4/3;
+                width: 300px;
+            }
+
+            @include for-wide-layout {
+                aspect-ratio: 16/9;
+            }
+        }
+
+        .about-info {
+            flex-basis: 50%;
+            padding: 0;
+            font-size: 1rem;
+            
+            gap: 0.5rem;
+
+            @include for-mobile-layout {
+                width: 80vw;
+            }
+
+            @include for-narrow-layout {
+                padding: 0 16px;
+
+            }
+
+            @include for-normal-layout {
+                font-size: 1.5rem;
+                gap: 1rem;
+            }
+
+            @include for-wide-layout {
+                padding: 0 100px;
+            }
+        }
+
+        button {
+            padding: 15px 60px;
+            border-radius: 2rem;
+            font-size: 1rem;
+
+            &:hover {
+                background-color: darken($color: $clr1, $amount: 20);
+            }
+
+            @include for-normal-layout {
+                font-size: 1.5rem;
+            }
+        }
+    }
+
+}
