--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -9,6 +9,7 @@ $clr5: #003AD2;
 $clr6: #dff0ea;
 $bgclr1: #000330;
 $bgclr2: #4B44B8;
+$shadow1: 0px 4px 14px 0px rgba(72, 72, 72, 0.4);
 
 
 // Breakpoints
