--- a/src/assets/styles/views/_login-signup-page.scss
+++ b/src/assets/styles/views/_login-signup-page.scss
@@ -2,7 +2,7 @@
 
     @include for-mobile-layout {
         background-image: url(../../img/formbg.jpg);
-        @include background-img ;
+        @include background-img;
         height: 100vh;
         width: 100vw;
     }
@@ -20,7 +20,7 @@
         @include for-mobile-layout {
             width: 460px;
             border-radius: 8px;
-            box-shadow: 0px 4px 14px 0px rgba(72, 72, 72, 0.4);
+            box-shadow: $shadow1 ;
         }
     }
 
