--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -2,18 +2,19 @@
     background-color: $clr1;
     width: 100vw;
     color: $clr2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
+    padding: 0.5rem 1.5rem;
     
-    .active {
-        color: $clr7;
-    }
+   .login-link{
+    color: $clr2;
+   }
 
     a {
         font-weight: 600;
-        color: $clr2;
+        color: black;
+
+        &:hover {
+            text-decoration: none;
+        }
     }
 
     img {
@@ -22,9 +23,26 @@
     }
 
     nav {
-
         display: flex;
-        gap: 10px;
-        margin-right: 140px;
+        gap: 0.5rem;
+        font-size: 1.75rem;
+        padding-top: 0.5rem;
+
+        img{
+            margin-top: 5px;
+            width: 1.75rem;
+            height: 1.75rem;
+            border-radius: 50%;
+        }
+        
+    }
+
+    .shadow{
+        background-color: rgba($color: #000000, $alpha: 0.3);
+        width: 110vw;
+        height: 200vh;
+        z-index: 1;
+        position: fixed;
+        left: 0;
     }
 }
