--- a/src/assets/styles/cmps/_guide.scss
+++ b/src/assets/styles/cmps/_guide.scss
@@ -59,6 +59,12 @@
         left: 50%;
         transform: translate(-50%, -50%);
 
+        .active {
+            box-shadow: 1px 1px 5px 5px rgba(6,153,109,0.75);
+            -webkit-box-shadow: 1px 1px 5px 5px rgba(6,153,109,0.75);
+            -moz-box-shadow: 1px 1px 5px 5px rgba(6,153,109,0.75);
+        }
+
         img {
             width: 50px;
             height: 50px;
