--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "views/review-app";
 @import "views/user-details";
 @import "views/login-signup-page";
+@import "views/location-index";
 
 // Components
 @import "cmps/app-header";
