--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -18,7 +18,7 @@
         @content;
     }
 }
-@mixin for-midium-layout {
+@mixin for-medium-layout {
     @media (min-width: calc($medium-breakpoint )) {
         @content;
     }
