--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -17,11 +17,18 @@
         @include background-img;
 
         .hero-info {
-            margin-top: 240px;
+            margin-top: 150px;
             gap: 15px;
 
             @include for-mobile-layout {
                 gap: 30px;
+            }
+
+            @include for-narrow-layout {
+                margin-top: 200px;
+            }
+            @include for-normal-layout {
+                margin-top: 240px;
             }
         }
 
@@ -52,7 +59,7 @@
                 height: 70px;
             }
 
-            @include for-midium-layout {
+            @include for-medium-layout {
                 font-size: 2rem;
                 width: 400px;
                 height: 80px;
@@ -70,7 +77,7 @@
                 font-size: 3rem;
             }
 
-            @include for-midium-layout {
+            @include for-medium-layout {
                 font-size: 4rem;
 
             }
@@ -117,8 +124,7 @@
         .about-info {
             flex-basis: 50%;
             padding: 0;
-            font-size: 1rem;
-            
+            font-size: 1rem;    
             gap: 0.5rem;
 
             @include for-mobile-layout {
