--- a/src/assets/styles/views/_location-index.scss
+++ b/src/assets/styles/views/_location-index.scss
@@ -7,13 +7,15 @@
 
     .location-list {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
         column-gap: 24px;
         row-gap: 36px;
         margin-top: 35px;
     
-        @include for-ultrawide-layout {
-            grid-template-columns: repeat(6, 1fr);
+        @include for-medium-layout {
+            grid-template-columns: repeat(3, 1fr);
         }
     }
 }
+
+
