--- a/src/assets/styles/cmps/_location-preview.scss
+++ b/src/assets/styles/cmps/_location-preview.scss
@@ -1,15 +1,27 @@
-.location-preview{
+.location-preview {
 
-    .prev-carousel{
+    .prev-carousel {
         display: flex;
         overflow: hidden;
-        
+        position: relative;
+
 
         .stay-preview-img {
             min-width: 100%;
             aspect-ratio: 1/0.95;
             border-radius: 10px;
-            transition: 0.3s ease-in;
+            // transition: 0.3s ease-in;
+        }
+
+    }
+
+    .preview-info {
+        margin-top: 10px;
+
+
+
+        svg {
+            margin-top: 4px;
         }
     }
 }
