--- a/src/assets/styles/views/_location-index.scss
+++ b/src/assets/styles/views/_location-index.scss
@@ -1,9 +1,18 @@
-.location-page{
-    h2{
+.location-page {
+
+    .title-container{
+
+    }
+    h2 {
         text-align: center;
         padding: 3rem 0;
         font-weight: 300;
+        
+        flex-shrink: 0;
+        flex-grow: 1;
     }
+
+
 
     .location-list {
         display: grid;
@@ -11,11 +20,13 @@
         column-gap: 24px;
         row-gap: 36px;
         margin-top: 35px;
-    
+
         @include for-medium-layout {
             grid-template-columns: repeat(3, 1fr);
         }
+
+        @include for-wide-layout {
+            grid-template-columns: repeat(4, 1fr);
+        }
     }
 }
-
-
