--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "views/user-details";
 @import "views/login-signup-page";
 @import "views/location-index";
+@import "views/location-details";
 
 // Components
 @import "cmps/app-header";
