--- a/src/assets/styles/views/_location-index.scss
+++ b/src/assets/styles/views/_location-index.scss
@@ -1,18 +1,19 @@
 .location-page {
 
-    .title-container{
-
-    }
     h2 {
         text-align: center;
         padding: 3rem 0;
-        font-weight: 300;
-        
-        flex-shrink: 0;
-        flex-grow: 1;
+        font-weight: 300;           
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        @include for-narrow-layout {
+            flex-direction: row;
+        }
+
     }
-
-
 
     .location-list {
         display: grid;
