--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,6 +32,7 @@
 @import "cmps/side-bar";
 @import "cmps/location-preview";
 @import "cmps/location-filter";
+@import "cmps/gathering-modal";
 
 
 
