--- a/src/assets/styles/views/_location-details.scss
+++ b/src/assets/styles/views/_location-details.scss
@@ -45,18 +45,43 @@
         flex-direction: column;
         gap: 40px;
 
+        h4{
+            margin: 0.5rem 0;
+        }
+        svg {
+            margin-top: 6px;
+        }
+
+        .gathering-host{
+            gap: 0.5rem;
+            margin-top: 1rem;
+            img{
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
+                
+        }
+
         .create-gathering {
             gap: 1rem;
             width: 350px;
-            margin: 50px auto 0;
+            margin: 0 auto;
             padding: 1rem;
             border-radius: 0.5rem;
             box-shadow: $shadow1;
+            position: relative;
 
             h3{
                 padding-bottom: 1rem;
                 width: 100%;
                 border-bottom: 1px solid lightgray;
+            }
+            .select-date-error{
+                color: rgb(238, 66, 66);
+                position: absolute;
+                top: 115px;
+                font-size: 0.75rem;          
             }
 
             .ant-picker{
@@ -82,8 +107,26 @@
                   
                 }
             }
+
+        }
+        .join-gathering{
+            button{
+                padding: 1rem 6rem;
+                border-radius: 2rem;
+                font-size: 1.4rem;
+                
+            }
+            p{
+                font-size: 0.75rem;
+            }
         }
     }  
+    .google-map{
+        width: 60%;
+        aspect-ratio: 16 / 9;
+        margin:2.5rem auto ;
+        font-size: 100px;
+    }
 }
 
 th,td{
