--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -33,6 +33,7 @@
 @import "cmps/location-preview";
 @import "cmps/location-filter";
 @import "cmps/gathering-modal";
+@import "cmps/date-picker";
 
 
 
