--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -23,7 +23,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
     
     margin: 0;
-    line-height: 1;
+    line-height: 1;    
+    font-family: Cereal;
 }
 
 
