--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -6,3 +6,7 @@
     // font-family: montserrat;
     // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
 }
+@font-face {
+    font-family: Cereal;
+    src: url(../../fonts/cereal.otf);
+}
