--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -38,6 +38,7 @@
 @import "cmps/partic-amount-input";
 @import "cmps/google-map";
 @import "cmps/no-loc-modal";
+@import "cmps/loading-circle";
 
 
 
