--- a/src/assets/styles/cmps/_no-loc-modal.scss
+++ b/src/assets/styles/cmps/_no-loc-modal.scss
@@ -1,8 +1,14 @@
 .no-loc-modal{
     @include modal;
-
-    background: $clr2;
+    color: $clr2;
+    background-image: url(../../img/formbg.jpg);
     z-index: 100;
+    
+    @include for-mobile-layout {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+    }
     
 
     form{
